hphp/hack/test/typecheck/expression_trees/instance_method_call.php.like_types.exp
File "instance_method_call.php", line 13, characters 5-13:
Unsupported syntax for expression trees. (Parsing[1002])
File "instance_method_call.php", line 13, characters 15-19:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 33, characters 5-45:
  But got `dynamic` because it is an unenforceable type
